--- a/base/skin/template.xhtml
+++ b/base/skin/template.xhtml
@@ -20,8 +20,9 @@
         <div id="binoc-body"><div id="binoc-content" class="fadeIn">{$PAGE_CONTENT}</div></div>
       </div>
       <div id="binoc-statusbar">
-        <span id="binoc-statustext" class="alignleft">{$PAGE_STATUS}</span>
-        <span class="alignright" style="border-left: 1px solid #d7d7d7; padding-left: 2px; color: #a4a4a4"><em>{$SOFTWARE_VENDOR} {$SOFTWARE_NAME} {$SOFTWARE_VERSION}</em></span>
+        <span id="binoc-statustext" class="alignleft" style="min-width: 220px;">{$PAGE_STATUS}</span>
+        <span class="alignright" style="border-left: 1px solid #d7d7d7; padding-left: 8px; color: #6d6d6d"><em>{$SOFTWARE_VENDOR} {$SOFTWARE_NAME} {$SOFTWARE_VERSION}</em></span>
+        <span class="alignright" style="border-left: 1px solid #d7d7d7; padding-left: 8px;">{$SITE_DOMAIN}</span>
       </div>
     </div>
   </body>
